--- a/forexglobal/sass/blocks/main/header.scss
+++ b/forexglobal/sass/blocks/main/header.scss
@@ -375,7 +375,7 @@
         
         &--opened {
           position: absolute;
-          top: 200px;
+          top: 206px;
           // display: block;
           padding: 20px 0;
           background: rgba(47, 40, 97, 0.9);
@@ -386,7 +386,7 @@
         padding: 0 0 10px 0;
         
         &--opened {
-          top: 170px;
+          top: 175px;
         }
       }
       
